--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@levigo/webtoolkit-ng-client": "^6.19.43",
+    "@levigo/webtoolkit-ng-client": "^6.25.16",
+    "@levigo/jadice-web-icons": "~2.0.1",
+    "@levigo/jadice-common-components": "~1.0.4",
+    "@levigo/utility-types": "~2.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,10 +19,12 @@
     "react-scripts": "5.0.1",
     "sass": "^1.65.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "copyfiles": "^2.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
+    "postinstall": "copyfiles -f ./node_modules/@levigo/webtoolkit-ng-client/include/* ./public/precursor/",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
